# feldera

./: .arg  .bazelrc  .dockerignore  .earthlyignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  BUILD.bazel  CHANGELOG.md  CLAUDE.md  CLAUDE_GUIDELINES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.lock.bazel  Cargo.toml  Earthfile  LICENSE  LICENSE.librdkafka  LICENSE_TEMPLATE  MODULE.bazel  Makefile.toml  README.md  WORKSPACE.bazel  bun.lockb  bunfig.toml  config.json  connector-plugin-refactor-design.md  connector-plugin-refactor-migration.md  connector-plugin-refactor-notes-plugins-page.md  connector-plugin-refactor-notes-pr1.md  connector-plugin-refactor-notes-pr10.md  connector-plugin-refactor-notes-pr11.md  connector-plugin-refactor-notes-pr12.md  connector-plugin-refactor-notes-pr13.md  connector-plugin-refactor-notes-pr14.md  connector-plugin-refactor-notes-pr15.md  connector-plugin-refactor-notes-pr16.md  connector-plugin-refactor-notes-pr2.md  connector-plugin-refactor-notes-pr3.md  (+21 more)
adapters/: Cargo.toml  README.md
adapters/examples/: server.rs
adapters/src/: catalog.rs  deinput.rs  lib.rs
adapters/src/controller/: config.rs  error.rs  mod.rs  stats.rs
adapters/src/format/: csv.rs  mod.rs
adapters/src/server/: mod.rs  prometheus.rs
adapters/src/test/: data.rs  kafka.rs  mock_dezset.rs  mock_input_consumer.rs  mod.rs
adapters/src/transport/: file.rs  kafka.rs  mod.rs
adapters/static/: app.js  app.js.map  dbsp.css  dbsp.ts  errReporter.ts  index.html  ui.ts
crates/adapterlib/: CLAUDE.md  Cargo.toml  README.md
crates/adapterlib-meta/: Cargo.toml
crates/adapterlib-meta/src/: lib.rs
crates/adapterlib/src/: catalog.rs  connector.rs  connector_metadata.rs  format.rs  lib.rs  metrics.rs  postprocess.rs  preprocess.rs  transport.rs
crates/adapters/: BUILD.bazel  CLAUDE.md  Cargo.toml  README.md  build.rs
crates/adapters/benches/: avro_encoder.rs  bench_common.rs  delta_encoder.rs  postgres_output.rs
crates/adapters/examples/: server.rs
crates/adapters/src/: adhoc.rs  catalog.rs  circuit_handle.rs  controller.rs  deinput.rs  format.rs  integrated.rs  lib.rs  panic.rs  pipeline.rs  postprocess.rs  preprocess.rs  samply.rs  secret_resolver.rs  seroutput.rs  server.rs  test.rs  transport.rs  util.rs
crates/adapters/static/: .gitignore  dbsp.css  tsconfig.json
crates/adapters/tests/: jit_integration_test.rs  output_endpoint_control_shuttle.rs
crates/buffer-cache/: Cargo.toml  README.md
crates/buffer-cache/src/: builder.rs  lib.rs  lru.rs  s3_fifo.rs  tests.rs  thread_type.rs
crates/connector-example/: Cargo.toml  WRITING_A_CONNECTOR.md
crates/dataflow-jit/: BUILD.bazel  Cargo.toml  TODO.md
crates/datagen/: CLAUDE.md  Cargo.toml
crates/dbsp/: BUILD.bazel  CLAUDE.md  Cargo.toml  Makefile.toml  README.md
crates/fda/: CLAUDE.md  Cargo.toml  README.md  bench_openapi.json  build.rs  openapi.json  test.bash
crates/feldera-cli/: Cargo.toml  README.md
crates/feldera-fp/: Cargo.toml
crates/feldera-macros/: Cargo.toml
crates/feldera-observability/: Cargo.toml  README.md
crates/feldera-storage/: Cargo.toml
crates/feldera-types/: CLAUDE.md  Cargo.toml
crates/fxp/: CLAUDE.md  Cargo.toml
crates/iceberg/: CLAUDE.md  Cargo.toml
crates/ir/: CLAUDE.md  Cargo.toml
crates/jit/: Cargo.toml  dataflow.json  output_schema.json  sql-to-dbsp.bash  stubs.rs  test.sql
crates/nexmark/: CLAUDE.md  Cargo.toml
crates/pipeline-manager/: CLAUDE.md  Cargo.toml  Makefile.toml  build.rs  dark-banner.ascii  light-banner.ascii
pipeline_manager/: Cargo.toml  Makefile.toml  config.yaml  create_db.sql  grafana_dashboard.json
pipeline_manager/python/: README.md  pyproject.toml  test.py
pipeline_manager/scripts/: compile_project.sh  delete_config.sh  delete_pipeline.sh  delete_project.sh  kill_pipeline.sh  list_project_configs.sh  list_project_pipelines.sh  list_projects.sh  new_config.sh  new_pipeline.sh  new_project.sh  project_code.sh  project_status.sh  update_config.sh  update_project.sh
pipeline_manager/src/: compiler.rs  config.rs  db.rs  main.rs  runner.rs
pipeline_manager/static/: app.js  dbsp-project.ts  dbsp.css  errReporter.ts  index.html
python/: .dockerignore  .earthlyignore  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  test.py
python/aggregate_tests/: test_avg.py  test_base.py  test_bit_and.py  test_count.py  test_decimal_avg.py  test_decimal_table.py  test_int_avg.py  test_int_table.py
python/dbsp/: __init__.py  config.py  connection.py  connector.py  error.py  pipeline.py  program.py  project.py
python/dbsp-api-client/: README.md  pyproject.toml
python/dbt-feldera/: CONTRIBUTING.md  README.md  pyproject.toml
python/docs/: conf.py  examples.rst  feldera.rest.rst  feldera.rst  index.rst  introduction.rst  modules.rst  pandas.rst
python/feldera/: __init__.py  _callback_runner.py  _helpers.py  _httprequests.py  _sql_table.py  _sql_view.py  attached_connector.py  benchmarking.py  client.py  config.py  connector.py  connector_stats.py  enums.py  formats.py  output_handler.py  pipeline.py  pipeline_builder.py  pipeline_resource_config.py  resources.py  runtime_config.py  sql_context.py  sql_schema.py  stats.py  tags.py  testutils.py  testutils_oidc.py  types.py  wait_constants.py  wait_utils.py
python/feldera-api-client/: README.md  pyproject.toml
python/felderize/: .env.example  .gitignore  README.md  pyproject.toml
python/pyfeldera/: .gitignore  FABRIC_QUICKSTART.md  README.md  pyproject.toml
python/tests/: CLAUDE.md  README.md  __init__.py  conftest.py  grades-json.csv  grades.csv  helper.py  integration_tests.py  negative_test.py  requirements.txt  run-all-tests.sh  shared_test_pipeline.py  students.csv  test_aggregates.py  test_average.py  test_checkpoint_sync.py  test_connector.py  test_issue4457.py  test_pipeline.py  test_pipeline_builder.py  test_program.py  test_shared_pipeline.py  test_shared_pipeline0.py  test_shared_pipeline1.py  test_shared_pipeline_stress.py  test_sum.py  test_uda.py  test_udf.py  test_variant.py  test_wireframes.py  utils.py
(+11444 files in other folders)
