[workspace]
members = [
  "crates/adapterlib",
  "crates/adapters",
  "crates/dbsp",
  "crates/fda",
  "crates/nexmark",
  "crates/feldera-types",
  "crates/pipeline-manager",
  "crates/sqllib",
  "sql-to-dbsp-compiler/lib/readers",
  "crates/datagen",
]
exclude = [
  "sql-to-dbsp-compiler/temp",
  "sql-to-dbsp-compiler/experiments",
  "demo/project_demo12-HopsworksTikTokRecSys/tiktok-gen"
]
resolver = "2"

[workspace.metadata.release]
release = false

[profile.bench]
debug = true
