[workspace]
members = [
  "crates/adapterlib",
  "crates/adapters",
  "crates/dbsp",
  "crates/fda",
  "crates/nexmark",
  "crates/feldera-types",
  "crates/pipeline-manager",
  "crates/sqllib",
  "sql-to-dbsp-compiler/lib/readers",
  "crates/datagen",
  "crates/iceberg",
  "crates/storage"
]
exclude = [
  "sql-to-dbsp-compiler/temp",
  "sql-to-dbsp-compiler/experiments",
  "demo/project_demo12-HopsworksTikTokRecSys/tiktok-gen"
]
resolver = "2"

[patch.crates-io]
datafusion = { git = "https://github.com/ryzhyk/datafusion.git", rev = "f561db7" }
datafusion-common = { git = "https://github.com/ryzhyk/datafusion.git", rev = "f561db7" }
datafusion-expr = { git = "https://github.com/ryzhyk/datafusion.git", rev = "f561db7" }
datafusion-functions = { git = "https://github.com/ryzhyk/datafusion.git", rev = "f561db7" }
datafusion-functions-aggregate = { git = "https://github.com/ryzhyk/datafusion.git", rev = "f561db7" }
datafusion-physical-expr = { git = "https://github.com/ryzhyk/datafusion.git", rev = "f561db7" }
datafusion-physical-plan = { git = "https://github.com/ryzhyk/datafusion.git", rev = "f561db7" }
datafusion-proto = { git = "https://github.com/ryzhyk/datafusion.git", rev = "f561db7" }
datafusion-sql = { git = "https://github.com/ryzhyk/datafusion.git", rev = "f561db7" }

[workspace.metadata.release]
release = false

[profile.bench]
debug = true
