[workspace.package]
authors = ["Feldera Team <dev@feldera.com>"]
version = "0.121.0"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/feldera/feldera"
repository = "https://github.com/feldera/feldera"
keywords = ["ivm", "analytics", "database", "incremental", "sql"]
readme = "README.md"
# Define Minimum Supported Rust Version (MSRV)
rust-version = "1.87.0"
edition = "2021"

[workspace]
members = [
  "crates/adapterlib",
  "crates/adapters",
  "crates/dbsp",
  "crates/fda",
  "crates/nexmark",
  "crates/feldera-types",
  "crates/pipeline-manager",
  "crates/sqllib",
  "sql-to-dbsp-compiler/lib/readers",
  "crates/datagen",
  "crates/iceberg",
  "crates/storage",
  "crates/rest-api",
  "crates/ir",
  "crates/fxp",
]
exclude = [
  "sql-to-dbsp-compiler/temp",
  "sql-to-dbsp-compiler/experiments",
  "sql-to-dbsp-compiler/multi",
  "demo/project_demo12-HopsworksTikTokRecSys/tiktok-gen"
]
resolver = "2"

[patch.crates-io]
actix-http = { git = "https://github.com/feldera/actix-web.git", branch = "issue1313"}

[workspace.dependencies]
actix = "0.13.1"
actix-codec = "0.5.0"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-http = "3.9.0"
actix-test = "0.1.1"
actix-web = "4.9.0"
actix-web-httpauth = "0.8.0"
actix-web-static-files = "4.0.1"
actix-ws = "0.3.0"
anyhow = "1.0.91"
apache-avro = "0.18.0"
arc-swap = "1.5.1"
arcstr = "1.2.0"
arrow = "55"
arrow-json = "55"
ascii_table = "=4.0.2"
async-channel = "2.3.1"
async-nats = "0.42.0"
async-std = "1.12.0"
async-stream = "0.3.5"
async-trait = "0.1"
atomic = "0.6.0"
awc = "3.5.1"
aws-config = "1.1.7"
aws-sdk-s3 = "1.86.0"
aws-types = "1.1.7"
base64 = "0.22.1"
base58 = "0.2.0"
binrw = "0.13.3"
blake3 = "1.8.2"
bstr = "0.2.1"
bytemuck = "1.16.3"
bytes = "1.10.1"
bytestring = "1.4.0"
change-detection = "1.2"
cached = { version = "0.43.0", features = ["async"] }
chrono = { version = "0.4.38", default-features = false }
circular-queue = "0.2.6"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
colored = "2.0.0"
comfy-table = "7.1.3"
compare = "0.1.0"
core_affinity = "0.8.1"
crc32c = "0.6.4"
criterion = "0.5.1"
crossbeam = "0.8.4"
crossbeam-utils = "0.8.6"
csv = "1.2.2"
csv-core = "0.1.10"
datafusion = "47"
dbsp = { path = "crates/dbsp", version = "0.121.0" }
dbsp_nexmark = { path = "crates/nexmark" }
deadpool-postgres = "0.10.5"
#deltalake = "0.26.2"
deltalake = { git = "https://github.com/ryzhyk/delta-rs.git", rev = "77ef46e" }
directories = "6.0"
dirs = "5.0"
dyn-clone = "1.0.17"
enum-map = "2.7.3"
env_logger = "0.11"
erased-serde = "0.3.31"
fake = "2.10"
fastbloom = "0.8.0"
fdlimit = "0.3.0"
feldera-adapterlib = { path = "crates/adapterlib" }
feldera-datagen = { path = "crates/datagen" }
feldera-fxp = { version = "0.121.0", path = "crates/fxp", features = ["dbsp"] }
feldera-iceberg = { path = "crates/iceberg" }
feldera-sqllib = { path = "crates/sqllib" }
feldera-storage = { version = "0.121.0", path = "crates/storage" }
feldera-types = { version = "0.121.0", path = "crates/feldera-types" }
feldera-rest-api = { version = "0.121.0", path = "crates/rest-api" }
feldera-ir = { version = "0.121.0", path = "crates/ir" }
flate2 = "1.1.0"
form_urlencoded = "1.2.0"
futures = "0.3.30"
futures-timer = "3.0.2"
futures-util = "0.3.30"
geo = "0.26.0"
google-cloud-gax = "0.19.1"
google-cloud-googleapis = "0.15.0"
google-cloud-pubsub = "0.29.1"
governor = "0.7.0"
hashbrown = "0.14.2"
hdrhist = "0.5"
hex = "0.4.3"
home = "=0.5.9"
iceberg = "0.5.1"
iceberg-catalog-glue = "0.5.1"
iceberg-catalog-rest = "0.5.1"
iceberg-datafusion = "0.5.1"
impl-trait-for-tuples = "0.2"
indexmap = "2.7.1"
indicatif = "0.17.0-rc.11"
indoc = "2.0.5"
inventory = "0.3"
itertools = "0.14.0"
jemalloc_pprof = "0.7.0"
json_to_table = "0.9.0"
jsonwebtoken = "8"
lexical-core = "1.0.5"
libc = "0.2.153"
like = "0.3.1"
log = "0.4.20"
md-5 = "0.10.6"
metrics = "0.23.0"
metrics-exporter-prometheus = "0.15.3"
metrics-util = "0.17.0"
mimalloc-rust-sys = "1.7.2"
mime = "0.3.16"
minitrace = "0.6"
minitrace-jaeger = "0.6"
mockall = "0.12.1"
nix = "0.29.0"
nonzero_ext = "0.3.0"
num = "0.4.1"
num-bigint = "0.4.6"
num-derive = "0.4.2"
num-format = "0.4.0"
num-traits = "0.2.19"
object_store = "0.11.2"
once_cell = "1.20.2"
openssl = "0.10.72"
ordered-float = { version = "4.2.0", features = ["serde"] }
ouroboros = "0.18.4"
parquet = "55"
paste = "1.0.12"
petgraph = "0.6.0"
pg-client-config = "0.1.2"
postgres = "0.19.10"
postgres-openssl = "0.5.1"
postgresql_embedded = { version = "0.18.6", features = ["bundled"] }
pprof = "0.13.0"
pretty_assertions = "1.4.0"
prettyplease = "0.2.22"
progenitor = "0.7.0"
progenitor-client = "0.9"
proptest = "1.5.0"
proptest-derive = "0.5.0"
proptest-state-machine = "0.3.0"
ptr_meta = "0.2.0"
quick_cache = "0.6.14"
r2d2 = "0.8.10"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
rand_xoshiro = "0.6.0"
range-set = "0.0.11"
rdkafka = "0.37.0"
redis = "0.28.2"
refinery = "0.8.10"
regex = "1.10.2"
reqwest = "0.12"
reqwest-websocket = "0.5.0"
rkyv = { version = "0.7.45", default-features = false }
rmp-serde = "1.3.0"
rmpv = "1.3.0"
rstest = "0.15"
# Make sure this is the same rustls version used by the `tonic` crate.
# See the `ensure_default_crypto_provider` function.
rustls = "0.23.12"
rustyline = "15.0"
ryu = "1.0.20"
schema_registry_converter = "4.2.0"
serde = "1.0.213"
serde_arrow = { version = "0.13.4", features = ["arrow-55"] }
serde_bytes = "0.11.15"
serde_json = { version = "1.0.132", features = ["arbitrary_precision"] }
serde_urlencoded = "0.7.1"
serde_with = "3.0.0"
serde_yaml = "0.9.34"
serial_test = "3"
sha2 = "0.10.8"
size-of = { version = "0.1.6", features = [
    "time-std",
    "ordered-float",
], package = "feldera-size-of" }
sltsqlvalue = { path = "sql-to-dbsp-compiler/lib/sltsqlvalue" }
smallvec = { version = "1.15.0", features = ["serde", "write"] }
snap = "1.1.1"
static-files = "0.2.3"
static_assertions = "1.1.0"
syn = "2.0.77"
tabled = "0.17"
tar = "0.4.44"
tarpc = "0.33.0"
tempfile = "3.15"
termbg = "0.5.1"
test_bin = "0.4.0"
textwrap = "0.15.0"
thiserror = "2"
threadpool = "1.8.1"
tikv-jemallocator = "0.6.0"
time = "0.3.20"
tokio = "1.44.2"
tokio-postgres = "0.7"
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
typedmap = "0.3.0"
url = "2.5.0"
urlencoding = "2.1.3"
utoipa = { version = "4.2", features = ["uuid"] }
utoipa-swagger-ui = { version = "7.1", features = ["vendored"] }
uuid = { version = "1.17.0", features = ["serde"] }
wiremock = "0.6"
xxhash-rust = "0.8.6"
zip = "0.6.2"
zstd = "0.12.0"
backtrace = "0.3.75"

[workspace.metadata.release]
release = false

[profile.bench]
debug = true
