load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_rust",
    sha256 = "c46bdafc582d9bd48a6f97000d05af4829f62d5fee10a2a3edddf2f3d9a232c1",
    urls = ["https://github.com/bazelbuild/rules_rust/releases/download/0.28.0/rules_rust-v0.28.0.tar.gz"],
)

load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains")

rules_rust_dependencies()

rust_register_toolchains(
    edition = "2021",
    versions = [
        "1.72.0",
        "nightly/2023-10-01",
    ],
)

load("@rules_rust//crate_universe:repositories.bzl", "crate_universe_dependencies")
crate_universe_dependencies()

load("@rules_rust//crate_universe:defs.bzl", "crates_repository", "crate")
crates_repository(
    name = "crate_index",
    cargo_lockfile = "//:Cargo.lock",
    lockfile = "//:Cargo.lock.bazel",
    annotations = {
        "dbsp": [crate.annotation(
            gen_binaries = True,
        )],
        "rdkafka-sys": [crate.annotation(
            gen_build_script = False,
        )],
    },
    manifests = [
        "//:Cargo.toml",
        "//:crates/adapters/Cargo.toml",
        "//:crates/dataflow-jit/Cargo.toml",
        "//:crates/dbsp/Cargo.toml",
        "//:crates/nexmark/Cargo.toml",
        "//:crates/pipeline_manager/Cargo.toml",
        "//:crates/pipeline-types/Cargo.toml",
        "//:crates/webui-tester/Cargo.toml",
        "//:sql-to-dbsp-compiler/lib/hashing/Cargo.toml",
        "//:sql-to-dbsp-compiler/lib/readers/Cargo.toml",
        "//:sql-to-dbsp-compiler/lib/sqllib/Cargo.toml",
        "//:sql-to-dbsp-compiler/lib/sqlvalue/Cargo.toml",
        "//:sql-to-dbsp-compiler/lib/tuple/Cargo.toml",
    ],
    generate_binaries = True,
)

load("@crate_index//:defs.bzl", "crate_repositories")
crate_repositories()

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_foreign_cc",
    # TODO: Get the latest sha256 value from a bazel debug message or the latest
    #       release on the releases page: https://github.com/bazelbuild/rules_foreign_cc/releases
    #
    # sha256 = "...",
    strip_prefix = "rules_foreign_cc-0.5.1",
    url = "https://github.com/bazelbuild/rules_foreign_cc/archive/0.5.1.tar.gz",
)

load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")

rules_foreign_cc_dependencies()

# rdkafka source code repository
_ALL_CONTENT = """\
filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
"""
http_archive(
    name = "rdkafka",
    build_file_content = _ALL_CONTENT,
    strip_prefix = "librdkafka-2.2.0",
    url = "https://github.com/confluentinc/librdkafka/archive/refs/tags/v2.2.0.tar.gz",
)
