[package]
name = "dbsp_adapters"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
num-traits = "0.2.15"
num-derive = "0.3.3"
anyhow = "1.0.57"
crossbeam = "0.8.2"
dbsp = { path = "../" }
serde = { version = "1.0", features = ["derive"] }
erased-serde = "0.3.23"
once_cell = "1.9.0"
serde_yaml = "0.9.14"
csv = { git = "https://github.com/ryzhyk/rust-csv.git" }
bincode = { version = "2.0.0-rc.2", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0.87"
size-of = { version = "0.1.2", features = ["time-std"]}
tempfile = "3.3.0"
