[package]
name = "dbsp_adapters"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["with-kafka", "server"]
with-kafka = ["rdkafka"]
server = ["actix-files", "actix-web", "serde_json", "mime", "with-kafka"]
test-utils = ["size-of", "futures", "proptest", "proptest-derive"]

[dependencies]
num-traits = "0.2.15"
num-derive = "0.3.3"
anyhow = "1.0.57"
crossbeam = "0.8.2"
dbsp = { path = "../" }
serde = { version = "1.0", features = ["derive"] }
erased-serde = "0.3.23"
once_cell = "1.9.0"
serde_yaml = "0.9.14"
serde_json = { version = "1.0.89", optional = true }
csv = { git = "https://github.com/ryzhyk/rust-csv.git" }
bincode = { version = "2.0.0-rc.2", features = ["serde"] }
# cmake-build is required on Windows.
rdkafka = { version = "0.29.0", features = ["cmake-build"], optional = true }
actix-files = { version = "0.6.2", optional = true }
actix-web = { version = "4.2", optional = true }
mime = { version = "0.3.16", optional = true }
log = "0.4.17"
size-of = { version = "0.1.2", features = ["time-std"], optional = true}
futures = { version = "0.3.25", optional = true}
proptest = { version = "1.0.0", optional = true} 
proptest-derive = { version = "0.3.0", optional = true }

[dev-dependencies]
serde_json = "1.0.87"
size-of = { version = "0.1.2", features = ["time-std"]}
tempfile = "3.3.0"
proptest = "1.0.0"
proptest-derive = "0.3.0"
futures = "0.3.25"

[[example]]

name = "server"
required-features = ["with-kafka", "test-utils", "server"]
