[package]
name = "dbsp_pipeline_manager"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]

actix-web = "4.2"
actix-web-static-files = "4.0.0"
static-files = "0.2.3"
actix-files = "0.6.2"
anyhow = "1.0.57"
tokio = { version = "1.24.1", features = ["fs", "macros", "process", "io-util"] }
tokio-postgres = "0.7.7"
log = "0.4.17"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
mime = "0.3.16"
clap = { version = "4.0.32", features = ["derive"] }
regex = "1.7.0"
reqwest = "0.11.13"
fs_extra = "1.2.0"

[build-dependencies]
static-files = "0.2.3"
