[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feldera"
readme = "README.md"
description = "The feldera python client"
version = "0.34.0"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { "name" = "Abhinav", "email" = "abhinav.gyawali@feldera.com" },
]
keywords = [
    "feldera",
    "python",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "pandas",
    "typing-extensions",
    "numpy<2",
    "pretty-errors",
    "ruff>=0.6.9",
]
[project.urls]
Homepage = "https://www.feldera.com"
Documentation = "https://docs.feldera.com/python"
Repository = "https://github.com/feldera/feldera"
Issues = "https://github.com/feldera/feldera/issues"
