[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feldera"
readme = "README.md"
description = "The feldera python client"
version = "0.214.0"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { "name" = "Feldera Team", "email" = "dev@feldera.com" },
]
keywords = [
    "feldera",
    "python",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "pandas>=2.1.2",
    "typing-extensions",
    "numpy>=2.2.4",
    "pretty-errors",
    "ruff>=0.6.9",
    "PyJWT>=2.8.0",
]
[project.urls]
Homepage = "https://www.feldera.com"
Documentation = "https://docs.feldera.com/python"
Repository = "https://github.com/feldera/feldera"
Issues = "https://github.com/feldera/feldera/issues"

[dependency-groups]
dev = [
    "pytest-timeout>=2.3.1",
    "pytest-xdist>=3.8.0",
    "pytest>=8.3.5",
    "sphinx-rtd-theme==2.0.0",
    "sphinx==7.3.7",
    "simplejson==3.20.1",
]

[tool.pytest.ini_options]
pythonpath = "feldera"
