load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")

rust_library(
    name = "adapters",
    srcs = glob([
        "src/**/*.rs",
    ]),
    aliases = aliases(),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    visibility = ["//visibility:public"],
    deps = all_crate_deps() + ["//crates/dbsp:dbsp", "//:rdkafka"],
)

#rust_test(
#    name = "unit_test",
#    aliases = aliases(),
#    crate = ":dbsp_adapters",
#    proc_macro_deps = all_crate_deps(
#        proc_macro_dev = True,
#    ),
#    deps = all_crate_deps(
#        normal_dev = True,
#    ),
#)
